--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,9 @@
   overflow: hidden;
   color: rgb(33, 133, 208);
 }
+
+@media only screen and (max-width: 600px) {
+  .ui.icon.header .icon {
+    font-size: 2em !important;
+  }
+}
